# us_flights_analytics_2023_DE_Capstone

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: cd.yml  ci.yml
airflow/: README.md
airflow/dags/: flight_delay_pipeline.py
airflow/dags/dbt_transform/us_flight_analytics/: .gitignore  .user.yml  README.md  dbt_project.yml  profiles.yml
airflow/dags/dbt_transform/us_flight_analytics/macros/: create_external_tables.sql
airflow/dags/dbt_transform/us_flight_analytics/models/business/: fact_flight_weather_analytics.sql  mart_airline_monthly_trend.sql  mart_airline_most_cancelled.sql  mart_airline_performance.sql  mart_businest_times.sql
airflow/dags/dbt_transform/us_flight_analytics/models/staging/: sources.yml  stg_cancelled.sql  stg_flights.sql  stg_geo.sql  stg_weather.sql
airflow/dags/dbt_transform/us_flight_analytics/tests/: assert_cancelled_flight_has_no_duration.sql
airflow/dags/spark_jobs/: README.md  spark_preprocessing.py
docs/: RESOURCES.md
infra/: README.md  main.tf  main.tf.example  variables.tf  variables.tf.example
spark_jobs/: spark_preprocessing.ipynb
test/: e2e_integration_test.sh  test_spark.py
